# package-analysis

./: .dockerignore  .gitignore  .golangci.yml  CONTRIBUTING.md  Makefile  README.md  SECURITY-INSIGHTS.yml  SECURITY.md  cloudbuild.yaml  go.mod  go.sum  go.work  go.work.sum  osv-scanner.toml  run_analysis.sh  script.sh
.github/: dependabot.yml
.github/workflows/: build-images.yml  build.yml  ci.yml  codeql-analysis.yml  dependabot.yml  deploy.yml  depsreview.yml  integration.yml  (+8 more)
analysis/: Dockerfile  README.md  analysis.go  customrules.yaml  go.mod  go.sum  main.go  node-runner.sh  node.txt  npm.go  pypi.go  python-runner.sh  ruby-runner.sh  rubygems.go  rubygems.txt  runsc
batch-analysis/: analyse-tarballs.sh  format-json.py  process-json.awk
docs/: CHARTER.md  case_studies.md  data_schema.md  queries.md
examples/: README.md
infra/: README.md  deploy.sh
infrastructure/: Makefile  Pulumi.dev.yaml  Pulumi.yaml  README.md  go.mod  go.sum  main.go
loader/: README.md  go.mod  go.sum  load.go
sample_packages/: Makefile  README.md
sample_packages/sample_python_package/: Dockerfile  Makefile  README.md  pyproject.toml  setup.py
sample_packages/sample_python_package/src/: __init__.py  example.py
sandboxes/: README.md
scheduler/: Dockerfile  README.md  go.mod  go.sum  main.go
scripts/: analyse-tarballs.sh  bq_load.sh  deploy.sh  format-static-analysis-json.py  run_analysis.sh  run_analysis_batch.sh
server/: Dockerfile  go.mod  go.sum  main.go
terraform/: feeds.tf  npm.tf  pypi.tf  rubygems.tf
tools/: README.md
web/: README.md  deploy.sh
(+317 files in other folders)
