[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sample_python_package"
version = "0.0.1"
authors = [
    { name="OpenSSF <openssf-wg-securing-crit-prjs@lists.openssf.org>" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
